k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-hello-service
spec:
  type: NodePort  # Exposes the service on each Node's IP at a static port
  selector:
    app: flask-hello
  ports:
    - protocol: TCP
      port: 5000       # Service port
      targetPort: 5000 # Container port
      nodePort: 30007  # NodePort (range: 30000-32767)
