k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: flask.local  # Change your /etc/hosts to point this to your cluster
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-hello-service
            port:
              number: 5000
